force-app/main/default/objects/Reports__c/Reports__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Reports</label>
</CustomObject>