force-app/main/default/objects/Reports__c/fields/Investment_Area_Source_of_Funding__c.field-meta.xml
<CustomField>
    <fullName>Investment_Area_Source_of_Funding__c</fullName>
    <label>Investment Area - Source of Funding</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>