force-app/main/default/objects/Reports__c/fields/Related_Payments__c.field-meta.xml
<CustomField>
    <fullName>Related_Payments__c</fullName>
    <label>Related Payments</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>