force-app/main/default/objects/Reports__c/fields/Related_Requirements__c.field-meta.xml
<CustomField>
    <fullName>Related_Requirements__c</fullName>
    <label>Related Requirements</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>